# properties-tools

./: README.md  pyproject.toml
.github/workflows/: poetry.yml
properties_diff/: cli.py  diff.py  patch.py  utils.py
properties_tools/: color.py  diff.py  patch.py  utils.py
tests/: __init__.py  sample1.properties  sample1_alt.properties  sample2.properties  sample3.properties  test_cli.py  test_diff.py  test_patch.py
tests/samples/: sample1.properties  sample2.properties
tests/templates/tests.test_diff/: test_altfile.out  test_bad_sep.err  test_colors_diff.out  test_colors_simple.out  test_colors_wdiff.out  test_diff.out  test_quiet.out  test_quote_noquote.out  test_quote_withquote.out  test_samefile.out  test_sections_A.out  test_sections_AD.out  test_sections_AU.out  test_sections_D.out  test_sections_DU.out  test_sections_U.out  test_simple.out  test_wdiff.out
tests/templates/tests.test_patch/: test_add.out  test_bad_sep.err  test_color.out  test_comments.out  test_delete.out  test_output.out  test_samefile.out  test_update.out
