[tool.poetry]
name = "properties-diff"
version = "0.2.0"
description = "Command line tool to compare properties files"
homepage = "https://github.com/essembeh/properties-diff"
authors = ["Sébastien MB <seb@essembeh.org>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
colorama = ""


[tool.poetry.dev-dependencies]
black = ""
pylint = ""
pytest = ""
pytest-dotenv = ""
pytest-cov = ""
rope = ""

[tool.poetry.scripts]
properties-diff = 'properties_diff.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
